snapshots/care/data4life/hc-result-sdk-kmp/error/0.3.0-SNAPSHOT/error-0.3.0-20210927.134351-1.pom.md5
dc80e19e6d7e9929c8360d8fa0f19ec4